<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="app_name_splash">Photo Gallery</string>
    <string name="welcome_to">Welcome to</string>
    <string name="get_started">Get Started</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="get_started_content">By tapping on the “Get Started” Button\nyou agree with our Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="gifs">GIFs</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="label_today">Today</string>
    <string name="allow_storage_permission">Allow Storage Permission</string>
    <string name="permission_required_to_access_all_files">Permission required to access all files</string>
    <string name="cancel">Cancel</string>
    <string name="grant_access">Allow</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="revisit_the_moment">Revisit the\nmoment</string>
    <string name="details">Details</string>
    <string name="name">Name :</string>
    <string name="time">Time :</string>
    <string name="dimensions">Dimensions :</string>
    <string name="size">Size :</string>
    <string name="path">Path :</string>
    <string name="file_not_found">File not found</string>
    <string name="personalise_your_grid">Personalise Your Grid</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="comfortable">Comfortable</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="lock">Lock</string>
    <string name="add_to_album">Add To Album</string>
    <string name="move_to_album">Move to Album</string>
    <string name="slideshow">Slideshow</string>
    <string name="edit">Edit</string>
    <string name="no_items_selected">No items selected</string>
    <string name="share_via">Share via</string>
    <string name="error_sharing_items">Error sharing items: %1$s</string>
    <string name="delete_photo">Delete Photo?</string>
    <string name="move_to_bin">Move to Bin</string>
    <string name="are_you_sure_you_want_to_delete_photo">Are you sure you want to delete photo?</string>
    <string name="create">Create</string>
    <string name="create_new_album">Create New Album</string>
    <string name="enter_album_name">Enter Album Name...</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="error_deleting_media">Error deleting media</string>
    <string name="restore">Restore</string>
    <string name="photos_and_videos_display_the_days_left_until_they_are_permanently_deleted">Photos and videos display the days left until they are permanently deleted.</string>
    <string name="files_deleted_within_30_days_can_be_restored_from_the_recycle_bin">Files deleted within 30 days can be restored from the recycle bin</string>
    <string name="permanently_delete">Permanently Delete</string>
    <string name="delete_all_photos">Delete All Photos?</string>
    <string name="are_you_sure_you_want_to_permanently_delete_all_photos_from_this_device">Are you sure you want to permanently delete all photos from this device?</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="file_not_found_in_recycle_bin">File not found in recycle bin</string>
    <string name="_30_days">30 Days</string>
    <string name="_15_days">15 Days</string>
    <string name="_7_days">7 Days</string>
    <string name="save">Save</string>
    <string name="days">%1$s Days</string>
    <string name="please_select_image">Please select Image</string>
    <string name="delete_from_bin_options">Delete from Bin Options</string>
    <string name="new_album">New Album</string>
    <string name="please_enter_album_name">Please enter album name</string>
    <string name="failed_to_create_album">Failed to create album</string>
    <string name="album_already_exists">Album already exists</string>
    <string name="error_creating_album">Error creating album: %1$s</string>
    <string name="moved_to_album">Moved to %1$s</string>
    <string name="error_processing_media">Error processing media: %1$s</string>
    <string name="restore_or_delete">Restore or Delete</string>
    <string name="please_select_any_one_operation_n_restore_or_delete">Please select any one operation\n restore or delete?</string>
    <string name="no_photos_yet">No Photos Yet!</string>
    <string name="no_photos_available_capture_and_share_your_moments">No photos available. Capture and share your moments!</string>
    <string name="open_camera">Open Camera</string>
    <string name="no_videos_yet">No Videos Yet!</string>
    <string name="no_videos_available_capture_and_share_your_moments">No videos available. Capture and share your moments!</string>
    <string name="no_gifs_yet">No GIFs Yet!</string>
    <string name="no_gifs_here_add_some_fun_by_downloading_your_favourite_gifs">No GIFs here! Add some fun by downloading your favourite GIFs</string>
    <string name="favorite">Favorite</string>
    <string name="no_favourites_yet">No Favourites Yet!</string>
    <string name="your_favourites_list_is_empty_start_saving_content_to_fill_this_space">Your favourites list is empty. Start saving content to fill this space!</string>
    <string name="favorites">Favorites</string>
    <string name="error_removing_favorite">Error removing favorite</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="are_you_sure_you_want_to_remove_photo_from_favorite">Are you sure you want to remove photo from favorite?</string>
    <string name="no_image_selected">No image selected</string>
    <string name="remove">Remove</string>
    <string name="error_updating_favorite">Error updating favorite</string>
    <string name="error_checking_favorite_status">Error checking favorite status</string>
    <string name="rename">Rename</string>
    <string name="error_deleting_photo">Error deleting photo</string>
    <string name="error_moving_to_recycle_bin">Error moving to recycle bin</string>
    <string name="lock_photo">Lock Photo</string>
    <string name="are_you_sure_want_to_lock_this_photo">Are you sure want to lock this photo?</string>
    <string name="are_you_sure_want_to_lock_this_video">Are you sure want to lock this video?</string>
    <string name="please_enter_name">Please enter a name</string>
    <string name="error_renaming_file">Error renaming file</string>
    <string name="invalid_image_path">Invalid image path</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="original">Original</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="crop_error_input_data_is_absent">Both input and output Uri must be specified</string>
    <string name="crop_mutate_exception_hint">Therefore, override color resource in your app to make it work on pre-L devices</string>
    <string name="scale">Scale</string>
    <string name="no_image_uri_received">No image URI received</string>
    <string name="oval">Oval</string>
    <string name="rectangle">Rectangle</string>
    <string name="line">Line</string>
    <string name="arrow">Arrow</string>
    <string name="emoji">Emoji</string>
    <string name="sticker">Sticker</string>
    <string name="eraser">Eraser</string>
    <string name="text">Text</string>
    <string name="filter">Filter</string>
    <string name="brush">Brush</string>
    <string name="shape">Shape</string>
    <string name="opacity">Opacity</string>
    <string name="done">Done</string>
    <string name="no_keep">No, Keep</string>
    <string name="yes_discard">Yes, Discard</string>
    <string name="discard_changes">Discard Changes?</string>
    <string name="are_you_sure_you_want_to_discard_the_changes">Are you sure you want to discard the changes?</string>
    <string name="rotate">Rotate</string>
    <string name="blur">Blur</string>
    <string name="crop">Crop</string>
    <string name="flip_horizontal">Flip Horizontal</string>
    <string name="flip_vertical">Flip Vertical</string>
    <string name="no_media_selected">No Media Selected</string>
    <string name="invalid_video_uri">Invalid video URI</string>
    <string name="share_video_via">Share video via</string>
    <string name="lock_video">Lock Video!</string>
    <string name="next">Next</string>
    <string name="set_pin">Set PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="enter_recovery_email">Enter recovery email</string>
    <string name="enter_recovery_email_dot">Enter recovery email...</string>
    <string name="set_security_question">Set Security Question</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="forgot_pin"><u>Forgot Pin?</u></string>
    <string name="set_email">Set Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_recovery_email">Confirm Recovery Email</string>
    <string name="re_enter_recovery_email">Re-enter recovery email...</string>
    <string name="help_you_to_set_password_when_you_forget_it">Help you to set password when you forget it</string>
    <string name="re_write_your_email_to_confirm_it">Re-write your email to confirm it</string>
    <string name="enter_the_answer">Enter the answer</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="verify">Verify</string>
    <string name="answer">Answer</string>
    <string name="what_s_your_favourite_color">What’s your favourite color?</string>
    <string name="what_s_your_pet_s_name">What’s your pet’s name?</string>
    <string name="what_s_your_lucky_number">What’s your lucky number?</string>
    <string name="no_locked_item_yet">No Locked Item Yet!</string>
    <string name="no_items_into_locked_folder_yet_lock_your_private_moment">No items into locked folder yet! Lock your private moment!</string>
    <string name="add">Add</string>
    <string name="locked">Locked</string>
    <string name="use_finger_print">Use Finger Print</string>
    <string name="modify_pin">Modify PIN</string>
    <string name="change_email">Change Email</string>
    <string name="change_security_question">Change Security Question</string>
    <string name="unlock_with_fingerprint">Unlock with Fingerprint</string>
    <string name="locked_images">Locked Images</string>
    <string name="these_photos_and_videos_are_hidden_and_wont_show_as_you_scroll_through_gallery_or_in_other_apps">These photos and videos are hidden and wont show as you scroll through gallery or in other apps</string>
    <string name="confirm_exit">Confirm Exit?</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="continue_">Continue</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="try_again">Try Again</string>
    <string name="please_make_sure_you_have_a_stable_internet_connection">Please make sure you have a stable internet connection</string>
    <string name="help_us_improve_share_your_thoughts_suggestions_or_issues">Help us improve! Share your thoughts, suggestions, or issues.</string>
    <string name="type_your_feedback_here">Type your feedback here...</string>
    <string name="we_value_your_feedback">We Value Your Feedback.</string>
</resources>