<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBgScreen"
    tools:context=".activity.FeedbackActivity">

    <include
        android:id="@+id/toolbarSettings"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarSettings"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/bg_rounded_corner_dialog"
        android:elevation="@dimen/_1sdp"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <TextView
            style="@style/CustomFontMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/we_value_your_feedback"
            android:textColor="?attr/colorTitleText"
            android:textSize="@dimen/_14ssp" />

        <TextView
            style="@style/CustomFontRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:ellipsize="end"
            android:gravity="start"
            android:text="@string/help_us_improve_share_your_thoughts_suggestions_or_issues"
            android:textColor="?attr/colorTextContent"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edtRequirements"
            style="@style/CustomFontMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_rounded_corner_border"
            android:gravity="start"
            android:hint="@string/type_your_feedback_here"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="@dimen/_10sdp"
            android:textColor="?attr/colorTitleText"
            android:textColorHint="?attr/colorEditTextHint"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/CustomFontMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/bg_rounded_corner_btn"
        android:outlineProvider="none"
        android:stateListAnimator="@null"
        android:text="@string/submit_feedback"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />
</RelativeLayout>